<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/svScrollViewCustomer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/CUSTOMERS_TITLE_NAME"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:textColorHint="@color/hint_text">

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/CUSTOMERS_ADD_FIRST_NAME"
                        android:inputType="textPassword"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:textColorHint="@color/hint_text">

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/CUSTOMERS_ADD_LAST_NAME"
                        android:inputType="textPassword"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:textColorHint="@color/hint_text">

                <EditText
                    android:id="@+id/etCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/CUSTOMERS_ADD_COMPANY_NAME"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:text="@string/CUSTOMERS_TITLE_CONTACT_NAME"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:textColorHint="@color/hint_text">

                    <EditText
                        android:id="@+id/etTelephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/CUSTOMERS_ADD_TELEPHONE"
                        android:inputType="textPassword"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:textColorHint="@color/hint_text">

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/CUSTOMERS_ADD_MOBILE"
                        android:inputType="textPassword"
                        android:paddingBottom="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:textColorHint="@color/hint_text">

                <EditText
                    android:id="@+id/etFax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/CUSTOMERS_ADD_FAX"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:textColorHint="@color/hint_text">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/CUSTOMERS_ADD_EMAIL"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>